--- a/webapp/html/login/floating-labels.css
+++ b/webapp/html/login/floating-labels.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background:url(./img/thu2.jpeg)  no-repeat center center;
+  background:url(./img/bg.jpg)  no-repeat center center;
   background-size:cover;
   background-attachment:fixed;
   background-color: #f5f5f5;
