fix(bug): cannot input

--- a/wxapp/static/iview/input/index.wxml
+++ b/wxapp/static/iview/input/index.wxml
@@ -27,5 +27,6 @@
         bindinput="handleInputChange"
         bindfocus="handleInputFocus"
         bindblur="handleInputBlur"
+        bindconfirm="handleInputConfirm"
     />
 </view>
