--- a/webapp/backend/app/templates/createactivity.html
+++ b/webapp/backend/app/templates/createactivity.html
@@ -54,7 +54,7 @@
                     <!-- Logo -->
                     <!-- ============================================================== -->
                     <div class="navbar-brand">
-                        <a href="main" class="logo">
+                        <a href="profile" class="logo">
                             <!-- Logo icon -->
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -116,7 +116,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="main"><i class="ti-user m-r-5 m-l-5"></i> 主页</a>
+                                <a class="dropdown-item" href="profile"><i class="ti-user m-r-5 m-l-5"></i> 主页</a>
                                 <a class="dropdown-item" href="https://www.google.com/"><i class="ti-close m-r-5 m-l-5"></i> 退出</a>
                             </div>
                         </li>
@@ -183,7 +183,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item">
-                                        <a href="main">主页</a>
+                                        <a href="profile">主页</a>
                                     </li>
                                     <li class="breadcrumb-item active" aria-current="page">新建项目</li>
                                 </ol>
