--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -51,7 +51,7 @@
                     <!-- Logo -->
                     <!-- ============================================================== -->
                     <div class="navbar-brand">
-                        <a href="main" class="logo">
+                        <a href="profile" class="logo">
                             <!-- Logo icon -->
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -116,7 +116,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
                                     src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="main"><i class="ti-user m-r-5 m-l-5"></i>
+                                <a class="dropdown-item" href="profile"><i class="ti-user m-r-5 m-l-5"></i>
                                     主页</a>
                                 <a class="dropdown-item" href="https://www.google.com/"><i
                                         class="ti-close m-r-5 m-l-5"></i> 退出</a>
@@ -185,7 +185,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item">
-                                        <a href="main">主页</a>
+                                        <a href="profile">主页</a>
                                     </li>
                                     <li class="breadcrumb-item active" aria-current="page">消息中心</li>
                                 </ol>
