--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -114,7 +114,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href=""
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
-                                    src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                                    src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle"
+                                    width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
                                 <a class="dropdown-item" href="main"><i class="ti-user m-r-5 m-l-5"></i>
                                     主页</a>
@@ -198,7 +199,99 @@
             </div>
 
             <div class="container-fluid">
-                <div class="card" style="width: 45rem;">
+                <div class="row">
+                    <!-- Column -->
+                    <div class="col-lg-4 col-xlg-3 col-md-5">
+                        <div class="card">
+                            <div class="card-body">
+                                <center class="m-t-30"> <img src="../static/img/myactivity/users/agent.jpg"
+                                        class="rounded-circle" width="150" />
+                                    <h4 class="card-title m-t-10">软件学院志愿团队</h4>
+                                    <div class="row text-center justify-content-md-center">
+                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
+                                                    class="icon-people"></i>
+                                                <font class="font-medium">完成项目：24</font>
+                                            </a></div>
+                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
+                                                    class="icon-picture"></i>
+                                                <font class="font-medium">当前项目：4</font>
+                                            </a></div>
+                                    </div>
+                                </center>
+                            </div>
+                            <div>
+                                <hr>
+                            </div>
+                            <div class="card-body"> <small class="text-muted">用户名 </small>
+                                <h6>ok1234324</h6> <small class="text-muted p-t-30 db">成立时间</small>
+                                <h6>2019.11.23</h6> <small class="text-muted p-t-30 db">管理单位</small>
+                                <h6>校团委志愿组</h6>
+                                        <small class="text-muted">团队简介</small>
+                                        <p class="card-text">这里是XXXX，我们是一个XXXXXXXXXXXXXXXXXXXXX的团队，我们运营的项目包括XXXXXXXX。
+                                        </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Column -->
+                    <!-- Column -->
+                    <div class="col-lg-8 col-xlg-9 col-md-7">
+                        <div class="card">
+                            <div class="card-body">
+                                <form class="form-horizontal form-material">
+                                    <div class="form-group">
+                                        <label class="col-md-12">团队名称</label>
+                                        <div class="col-md-12">
+                                            <input type="text" placeholder="软件学院志愿团队"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="example-email" class="col-md-12">负责人邮箱</label>
+                                        <div class="col-md-12">
+                                            <input type="email" placeholder="hannagover@gmail.com"
+                                                class="form-control form-control-line" name="example-email"
+                                                id="example-email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">负责人电话</label>
+                                        <div class="col-md-12">
+                                            <input type="text" placeholder="12345647890" class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">密码</label>
+                                        <div class="col-md-12">
+                                            <input type="password" value="password"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">管理单位</label>
+                                        <div class="col-md-12">
+                                            <input type="text" placeholder="校团委志愿组"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">团队简介</label>
+                                        <div class="col-md-12">
+                                            <textarea rows="5" placeholder="这里是XXXX，我们是一个XXXXXXXXXXXXXXXXXXXXX的团队，我们运营的项目包括XXXXXXXX。" class="form-control form-control-line"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button class="btn btn-success">更新信息</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Column -->
+                </div>
+
+                <!--div class="card" style="width: 45rem;">
                     <div class="card-body">
                         <h5 class="card-title">清华大学XXXX团队</h5>
                         <h6 class="card-subtitle mb-2 text-muted">用户名：XSWL12345</h6>
@@ -213,9 +306,9 @@
                                             </a>
                                         </p>
                                     </div>
-                                    <!--button class="btn btn-lg btn-info btn-block">招募公告</button>
+                                    <button class="btn btn-lg btn-info btn-block">招募公告</button>
                                     <button class="btn btn-lg btn-primary btn-block">导入成员</button>
-                                    <button class="btn btn-lg btn-secondary btn-block" disabled>申请结项</button-->
+                                    <button class="btn btn-lg btn-secondary btn-block" disabled>申请结项</button>
                                 </div>
                             </div>
                             <div class="col-sm-7">
@@ -237,7 +330,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div-->
             </div>
 
         </div>
