--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -114,7 +114,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href=""
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
-                                    src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                                    src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle"
+                                    width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
                                 <a class="dropdown-item" href="profile"><i class="ti-user m-r-5 m-l-5"></i>
                                     主页</a>
@@ -240,8 +241,8 @@
                                             <div class="row">
                                                 <div class="col-sm-5">
                                                     <div class="card">
-                                                        <img src="../static/img/myactivity/thu2.jpeg" class="card-img-top"
-                                                            alt="...">
+                                                        <img src="../static/img/myactivity/thu2.jpeg"
+                                                            class="card-img-top" alt="...">
                                                         <div class="card-body">
                                                             <h5 class="card-title">项目简介</h5>
                                                             <p class="card-text">招募校园讲解志愿者，在国庆期间提供讲解服务，每年参与的人数超过1000人。
@@ -263,10 +264,13 @@
                                                                 <li class="list-group-item">状态：待审核 <a href="#"
                                                                         class="btn btn-success"
                                                                         style="float:right">修改</a></li>
-                                                                <li class="list-group-item">招募时间：2019.11.23-2019.11.23<a
+                                                                <li class="list-group-item">招募日期：2019.11.23-2019.11.23<a
                                                                         href="#" class="btn btn-success"
                                                                         style="float:right">修改</a></li>
-                                                                <li class="list-group-item">活动时间：2019.11.23-2019.11.23<a
+                                                                <li class="list-group-item">活动日期：2019.11.23-2019.11.23<a
+                                                                        href="#" class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">活动时间：8:00-17:00<a
                                                                         href="#" class="btn btn-success"
                                                                         style="float:right">修改</a></li>
                                                                 <li class="list-group-item">活动类别：公益 <a href="#"
@@ -526,7 +530,8 @@
                                                 </div>
                                                 <button class="btn btn-lg btn-info btn-block">发送消息</button>
                                                 <button class="btn btn-lg btn-primary btn-block">更改职位</button>
-                                                <button class="btn btn-lg btn-secondary btn-block" disabled>招募邀请</button>
+                                                <button class="btn btn-lg btn-secondary btn-block"
+                                                    disabled>招募邀请</button>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
@@ -618,8 +623,8 @@
                                                     <div class="card mb-3" style="max-width: 450px;">
                                                         <div class="row no-gutters">
                                                             <div class="col-md-4">
-                                                                <img src="../static/img/myactivity/thu1.jpg" class="d-block w-100"
-                                                                    alt="...">
+                                                                <img src="../static/img/myactivity/thu1.jpg"
+                                                                    class="d-block w-100" alt="...">
                                                             </div>
                                                             <div class="col-md-8">
                                                                 <div class="card-body">
@@ -646,8 +651,8 @@
                                                     <div class="card mb-3" style="max-width: 450px;">
                                                         <div class="row no-gutters">
                                                             <div class="col-md-4">
-                                                                <img src="../static/img/myactivity/thu3.jpg" class="d-block w-100"
-                                                                    alt="...">
+                                                                <img src="../static/img/myactivity/thu3.jpg"
+                                                                    class="d-block w-100" alt="...">
                                                             </div>
                                                             <div class="col-md-8">
                                                                 <div class="card-body">
