--- a/webapp/backend/app/templates/auth/authbase.html
+++ b/webapp/backend/app/templates/auth/authbase.html
@@ -8,7 +8,7 @@
   <meta name="author" content="李胜锐">
   <meta name="generator" content="Jekyll v3.8.5">
   <title>志在清华——志愿团体登陆</title>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
   <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script-->
   <script src="../static/js/bootstrap.min.js"></script>
 
