fix: information.html

--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -33,6 +33,7 @@
 
 
     <!-- Message Modal -->
+    {% for activity in activities %}
     {% for userActivitiy in activity.userActivities %}
     <div class="modal fade" id="{{message.id}}" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
         aria-hidden="true">
@@ -90,6 +91,7 @@
             </div>
         </div>
     </div>
+    {% endfor %}
     {% endfor %}
     <!--div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -152,23 +154,23 @@
         <div class="tab-content">
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-left: 10px;">
                 <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                        aria-controls="home" aria-selected="true">所有消息</a>
+                    <a class="nav-link active" id="allMessage-tab" data-toggle="tab" href="#allMessage" role="tab"
+                        aria-controls="allMessage" aria-selected="true">所有消息</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                        aria-controls="profile" aria-selected="false">志愿者申请</a>
+                    <a class="nav-link" id="applyMessage-tab" data-toggle="tab" href="#applyMessage" role="tab"
+                        aria-controls="applyMessage" aria-selected="false">志愿者申请</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="messages-tab" data-toggle="tab" href="#messages" role="tab"
-                        aria-controls="messages" aria-selected="false">志愿者留言</a>
+                    <a class="nav-link" id="volunteerMessage-tab" data-toggle="tab" href="#volunteerMessage" role="tab"
+                        aria-controls="volunteerMessages" aria-selected="false">志愿者留言</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab"
-                        aria-controls="settings" aria-selected="false">管理员消息</a>
+                    <a class="nav-link" id="managerMessage-tab" data-toggle="tab" href="#managerMessage" role="tab"
+                        aria-controls="managerMessage" aria-selected="false">管理员消息</a>
                 </li>
             </ul>
-            <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="tab-pane active" id="allMessage" role="tabpanel" aria-labelledby="allMessage-tab">
                 <div class="col-12">
                     <div class="card">
 
@@ -190,6 +192,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {% for activity in activities %}
                                     {% for userActivitiy in activity.userActivities %}
                                     <tr class="table-success" style="cursor:pointer;"
                                         onclick="$('#{{userActivity.id}}').modal('toggle')">
@@ -201,6 +204,7 @@
                                         <td>未读</td>
                                         <td>回复</td>
                                     </tr>
+                                    {% endfor %}
                                     {% endfor %}
                                     <!--tr class="table-success" style="cursor:pointer;"
                                         onclick="$('#exampleModal').modal('toggle')">
@@ -258,7 +262,7 @@
                 </div>
             </div>
 
-            <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="tab-pane" id="applyMessage" role="tabpanel" aria-labelledby="applyMessag-tab">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -268,6 +272,7 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead>
+                                    {% for activity in activities %}
                                     {% for userActivitiy in activity.userActivities %}
                                     <tr class="table-success" style="cursor:pointer;"
                                         onclick="$('#{{userActivity.id}}').modal('toggle')">
@@ -280,7 +285,8 @@
                                         <td>回复</td>
                                     </tr>
                                     {% endfor %}
-                                    <!--tr>
+                                    {% endfor %}
+                                    <tr>
                                         <th scope="col">消息类型</th>
                                         <th scope="col">用户类型</th>
                                         <th scope="col">用户名称</th>
@@ -291,7 +297,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="table-success" style="cursor:pointer;"
+                                    <!--tr class="table-success" style="cursor:pointer;"
                                         onclick="$('#exampleModal').modal('toggle')">
                                         <th scope="row">志愿申请</th>
                                         <td>志愿者</td>
@@ -318,8 +324,8 @@
                                         <td>校园志愿讲解</td>
                                         <td>2019.11.20 22:36</td>
                                         <td>已读</td>
-                                        <td>回复</td>
-                                    </tr!-->
+                                        <td>回复</td-->
+                                    </tr!>
 
                                     </tbody>
                             </table>
@@ -328,7 +334,7 @@
                 </div>
             </div>
 
-            <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+            <div class="tab-pane" id="volunteerMessage" role="tabpanel" aria-labelledby="volunteerMessage-tab">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -338,8 +344,7 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead>
-                                    <!--其余消息，待开发-->
-                                    <!--tr>
+                                    <tr>
                                         <th scope="col">消息类型</th>
                                         <th scope="col">用户类型</th>
                                         <th scope="col">用户名称</th>
@@ -350,7 +355,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="table-primary" style="cursor:pointer;"
+                                    <!--其余消息，待开发-->
+                                    <!--tr class="table-primary" style="cursor:pointer;"
                                         onclick="$('#exampleModal').modal('toggle')">
                                         <th scope="row">志愿者留言</th>
                                         <td>志愿者</td>
@@ -377,7 +383,7 @@
                 </div>
             </div>
 
-            <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+            <div class="tab-pane" id="managerMessage" role="tabpanel" aria-labelledby="managerMessage-tab">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
